--- a/Resources/public/paella/player/config/config.json
+++ b/Resources/public/paella/player/config/config.json
@@ -41,6 +41,11 @@
             "userInfo": "UserDataDelegate"
         }
     },
+    "folders": {
+        "profiles": "config/profiles",
+        "resources": "resources",
+        "skins": "resources/style"
+    },
     "plugins": {
         "enablePluginsByDefault": false,
         "//**** Instructions: Disable any individual plugin by setting its enable property to false": {
