--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,13 @@
+pumukit_base_player_parent:
+    resource: "../../src/Pumukit/BasePlayerBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
+pumukit_base_player:
+    resource: "@PumukitBasePlayerBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 pumukit_paella_player:
     resource: "@PumukitPaellaPlayerBundle/Controller/"
     type:     annotation
