#11012 Enable DFXP captions

--- a/Resources/public/paella/player/config/config.json
+++ b/Resources/public/paella/player/config/config.json
@@ -65,8 +65,8 @@
                 "seconds": 30
             },
             "es.upv.paella.captionsPlugin": {
-                "enabled": false,
-                "searchOnCaptions": false
+                "enabled": true,
+                "searchOnCaptions": true
             },
             "es.upv.paella.extendedTabAdapterPlugin": {
                 "enabled": false
