RM12573 Add playlist plugin

--- a/Resources/public/paella/config_temp.json
+++ b/Resources/public/paella/config_temp.json
@@ -1,8 +1,9 @@
 {
     "player": {
+        "accessControlClass": "paella.AccessControl",
         "profileFrameStrategy": "paella.ProfileFrameStrategy",
         "videoQualityStrategy": "paella.BestFitVideoQualityStrategy",
-        "methods": [
+        "deprecated-methods": [
             {
                 "name": "streaming",
                 "enabled": true
@@ -20,6 +21,32 @@
                 "enabled": true
             }
         ],
+        "methods": [
+            {
+                "factory": "Html5VideoFactory",
+                "enabled": true
+            },
+            {
+                "factory": "MpegDashVideoFactory",
+                "enabled": true
+            },
+            {
+                "factory": "RTMPVideoFactory",
+                "enabled": true
+            },
+            {
+                "factory": "HLSVideoFactory",
+                "enabled": true
+            },
+            {
+                "factory": "ImageVideoFactory",
+                "enabled": true
+            },
+            {
+                "factory": "YoutubeVideoFactory",
+                "enabled": true
+            }
+        ],
         "audio": {
             "master": 1,
             "slave": 0
@@ -27,6 +54,10 @@
         "rtmpSettings": {
             "bufferTime": 5,
             "requiresSubscription": false
+        },
+        "slidesMarks": {
+            "enabled": true,
+            "color": "gray"
         }
     },
     "editor": {
@@ -38,13 +69,17 @@
         "dataDelegates": {
             "default": "CookieDataDelegate",
             "trimming": "CookieDataDelegate",
-            "userInfo": "UserDataDelegate"
+            "userInfo": "UserDataDelegate",
+            "visualAnnotations": "VisualAnnotationsDataDelegate"
         }
     },
     "folders": {
         "profiles": "config/profiles",
         "resources": "resources",
         "skins": "resources/style"
+    },
+    "experimental": {
+        "autoplay": true
     },
     "plugins": {
         "enablePluginsByDefault": false,
@@ -130,7 +165,11 @@
                 "showMasterVolume": true,
                 "showSlaveVolume": false
             },
-            "es.upv.paella.liveStramingIndicator": {
+            "es.upv.paella.visualAnnotationPlugin": {
+                "enabled": true,
+                "url": "https://media.upv.es/rest/video/"
+            },
+            "es.upv.paella.liveStreamingIndicatorPlugin": {
                 "enabled": true
             },
             "es.upv.paella.showEditorPlugin": {
@@ -200,9 +239,6 @@
                 "enabled": true
             },
             "es.upv.paella.editor.trimmingTrackPlugin": {
-                "enabled": true
-            },
-            "pumukitChapterMarkPlugin": {
                 "enabled": true
             }
         }
