RM12573 Enabled playbackRatePlugin

--- a/Resources/public/paella/player/config/config.json
+++ b/Resources/public/paella/player/config/config.json
@@ -135,7 +135,7 @@
                 "showWidthRes": true
             },
             "es.upv.paella.playbackRatePlugin": {
-                "enabled": false,
+                "enabled": true,
                 "availableRates": [
                     0.75,
                     1,
