TTK-13377 Disable reloadOnFullscreen

--- a/Resources/public/paella/player/config/config.json
+++ b/Resources/public/paella/player/config/config.json
@@ -4,7 +4,7 @@
         "profileFrameStrategy": "paella.ProfileFrameStrategy",
         "videoQualityStrategy": "paella.LimitedBestFitVideoQualityStrategy",
         "videoQualityStrategyParams":{ "maxAutoQualityRes":720 },
-        "reloadOnFullscreen": true,
+        "reloadOnFullscreen": false,
 
         "deprecated-methods":[{"name":"streaming","enabled":true},
                    {"name":"html","enabled":true},
