--- a/Resources/public/paella/player/config/config.json
+++ b/Resources/public/paella/player/config/config.json
@@ -5,6 +5,11 @@
         "videoQualityStrategy": "paella.LimitedBestFitVideoQualityStrategy",
         "videoQualityStrategyParams":{ "maxAutoQualityRes":720 },
         "reloadOnFullscreen": false,
+        "videoZoom": {
+            "enabled":false,
+            "max":800
+        },
+
 
         "deprecated-methods":[{"name":"streaming","enabled":true},
                    {"name":"html","enabled":true},
@@ -91,6 +96,15 @@
             "es.upv.paella.liveStreamingIndicatorPlugin":  { "enabled": false },
             "es.upv.paella.showEditorPlugin":{"enabled":false,"alwaysVisible":false},
             "es.upv.paella.arrowSlidesNavigatorPlugin": {"enabled": true, "showArrowsIn": "slave"},
+            "es.upv.paella.videoDataPlugin": {
+                "enabled": false,
+                "excludeLocations":[
+                    "paellaplayer.upv.es"
+                ],
+                "excludeParentLocations":[
+                    "localhost:8000"
+                ]
+            },
 
             "//****": "TabBar Plugins",
             "es.upv.paella.commentsPlugin": {"enabled": false},
@@ -110,6 +124,7 @@
 
             "//****": "Captions Parser Plugins",
             "es.upv.paella.captions.DFXPParserPlugin": {"enabled":true},
+            "es.teltek.paella.captions.WebVTTParserPlugin": {"enabled":true},
 
             "//****": "Search Service Plugins",
             "es.upv.paella.search.captionsSearchPlugin": {"enabled":true},
