Add new datadelegate

--- a/Resources/public/paella/player/config/config.json
+++ b/Resources/public/paella/player/config/config.json
@@ -52,7 +52,7 @@
             "trimming": "MHAnnotationServiceTrimmingDataDelegate",
             "userInfo": "UserDataDelegate",
             "visualAnnotations": "VisualAnnotationsDataDelegate",
-            "footprints" : "MHFootPrintsDataDelegate"
+            "footprints" : "FootprintsDataDelegate"
         }
     },
     "folders": {
