--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "paella"
     ],
     "homepage": "https://github.com/teltek/PuMuKIT2-paella-player-bundle",
-    "license": "proprietary",
+    "license": "Copyright",
     "authors": [
         {
             "name": "Teltek Team",
