--- a/Resources/public/paella/player/config/config.json
+++ b/Resources/public/paella/player/config/config.json
@@ -49,7 +49,7 @@
             "trimming": "MHAnnotationServiceTrimmingDataDelegate",
             "userInfo": "UserDataDelegate",
             "visualAnnotations": "VisualAnnotationsDataDelegate",
-            "footprints" : "FootprintsDataDelegate",
+            "footprints" : "PaellaFootPrintsDataDelegate",
             "metadata":"VideoManifestMetadataDataDelegate",
             "cameraTrack":"TrackCameraDataDelegate"
         }
