--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,9 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0",
+        "php": ">=7.2",
         "symfony/framework-bundle": "~2.0",
-        "twig/twig": "~1.5",
-        "pumukit/pumukit2": ">=2.5.6"
+        "pumukit/pumukit": ">=3.0"
     },
     "autoload": {
         "psr-4": {
