--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,8 @@
+pumukit_paella_player_parent:
+    resource: "../../../../pumukit/pumukit/src/Pumukit/BasePlayerBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 pumukit_paella_player:
     resource: "@PumukitPaellaPlayerBundle/Controller/"
     type:     annotation
