--- a/Resources/config/pumukit_paella_player.yaml
+++ b/Resources/config/pumukit_paella_player.yaml
@@ -14,6 +14,9 @@ services:
       $paellaFootPrints: '%pumukitpaella.footprints%'
       $paellaAutoPlay: '%pumukitpaella.autoplay%'
       $pumukitPlayerWhenDispatchViewEvent: '%pumukitplayer.when_dispatch_view_event%'
+      $requestContextScheme: '%router.request_context.scheme%'
+      $requestContextHost: '%router.request_context.host%'
+
 
   Pumukit\PaellaPlayerBundle\Controller\:
     resource: '../../Controller/'
