--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     ],
     "require": {
         "php": ">=7.2",
-        "pumukit/pumukit": ">=3.1"
+        "pumukit/pumukit": "^3.8",
+        "teltek/pumukit-soft-video-editor-bundle": ">2.0"
     },
     "autoload": {
         "psr-4": {
