--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     ],
     "require": {
         "php": ">=7.2",
-        "pumukit/pumukit": "^4.0",
-        "symfony/webpack-encore-bundle": "^1.14"
+        "pumukit/pumukit": "^4.0"
     },
     "autoload": {
         "psr-4": {
