TTK-25655 use paella player as pumukit base player

--- a/Resources/config/pumukit_paella_player.yaml
+++ b/Resources/config/pumukit_paella_player.yaml
@@ -49,3 +49,6 @@ services:
 
   Pumukit\PaellaPlayerBundle\Services\VoDManifest:
     class: Pumukit\PaellaPlayerBundle\Services\VoDManifest
+
+  Pumukit\PaellaPlayerBundle\Services\ChannelManifest:
+    class: Pumukit\PaellaPlayerBundle\Services\ChannelManifest
