--- a/Resources/public/paella/package.json
+++ b/Resources/public/paella/package.json
@@ -36,6 +36,7 @@
 		"paella-basic-plugins": "^1.2.0",
 		"paella-slide-plugins": "^1.2.1",
 		"paella-user-tracking": "^1.0.14",
-		"paella-zoom-plugin": "^1.2.0"
+		"paella-zoom-plugin": "^1.2.0",
+		"paella-teltek-plugins": "^1.0.0"
 	}
 }
