Add playlist feature

--- a/Resources/config/pumukit_paella_player.yaml
+++ b/Resources/config/pumukit_paella_player.yaml
@@ -52,3 +52,6 @@ services:
 
   Pumukit\PaellaPlayerBundle\Services\ChannelManifest:
     class: Pumukit\PaellaPlayerBundle\Services\ChannelManifest
+
+  Pumukit\PaellaPlayerBundle\Services\PlaylistManifest:
+    class: Pumukit\PaellaPlayerBundle\Services\PlaylistManifest
