--- a/Resources/public/paella/package.json
+++ b/Resources/public/paella/package.json
@@ -32,11 +32,11 @@
 		"webpack-dev-server": "^4.7.3"
 	},
 	"dependencies": {
-		"paella-core": "^1.2.1",
 		"paella-basic-plugins": "^1.2.0",
+		"paella-core": "^1.2.1",
 		"paella-slide-plugins": "^1.2.1",
+		"paella-teltek-plugins": "^1.0.3",
 		"paella-user-tracking": "^1.0.14",
-		"paella-zoom-plugin": "^1.2.0",
-		"paella-teltek-plugins": "^1.0.0"
+		"paella-zoom-plugin": "^1.2.0"
 	}
 }
