--- a/Resources/config/pumukit_paella_player.yaml
+++ b/Resources/config/pumukit_paella_player.yaml
@@ -47,6 +47,9 @@ services:
   Pumukit\PaellaPlayerBundle\Services\StreamsManifest:
     class: Pumukit\PaellaPlayerBundle\Services\StreamsManifest
 
+  Pumukit\PaellaPlayerBundle\Services\CustomManifest:
+    class: Pumukit\PaellaPlayerBundle\Services\CustomManifest
+
   Pumukit\PaellaPlayerBundle\Services\VoDManifest:
     class: Pumukit\PaellaPlayerBundle\Services\VoDManifest
 
