TTK-26496 add trimming manifest and update paella plugins

--- a/Resources/config/pumukit_paella_player.yaml
+++ b/Resources/config/pumukit_paella_player.yaml
@@ -53,3 +53,6 @@ services:
 
   Pumukit\PaellaPlayerBundle\Services\PlaylistManifest:
     class: Pumukit\PaellaPlayerBundle\Services\PlaylistManifest
+
+  Pumukit\PaellaPlayerBundle\Services\TrimmingManifest:
+    class: Pumukit\PaellaPlayerBundle\Services\TrimmingManifest
