TTK-26797: Show the player of the live channels

--- a/Resources/config/pumukit_paella_player.yaml
+++ b/Resources/config/pumukit_paella_player.yaml
@@ -50,6 +50,8 @@ services:
 
   Pumukit\PaellaPlayerBundle\Services\ChannelManifest:
     class: Pumukit\PaellaPlayerBundle\Services\ChannelManifest
+    arguments:
+      $eventDefaultPic: "%pumukit_new_admin.advance_live_event_create_default_pic%"
 
   Pumukit\PaellaPlayerBundle\Services\PlaylistManifest:
     class: Pumukit\PaellaPlayerBundle\Services\PlaylistManifest
