--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "pumukit/pumukit": "^4.0"
+        "php": "^8.2",
+        "pumukit/pumukit": "^4.0 || dev-master"
     },
     "autoload": {
         "psr-4": {
