--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "pumukit/pumukit": "^4.0 || dev-master as 4.*"
+        "pumukit/pumukit": "^4.0"
     },
     "autoload": {
         "psr-4": {
