--- a/Resources/public/paella/package.json
+++ b/Resources/public/paella/package.json
@@ -20,6 +20,7 @@
 		"@babel/core": "^7.12.16",
 		"@babel/preset-env": "^7.12.16",
 		"babel-loader": "^8.2.2",
+		"clean-webpack-plugin": "^4.0.0",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.1",
 		"html-webpack-plugin": "^5.5.0",
